--- a/task09/pom.xml
+++ b/task09/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>aws-java-sdk-dynamodb</artifactId>
             <version>1.12.721</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>dynamodb</artifactId>
+            <version>2.25.60</version>
+        </dependency>
     </dependencies>
 
     <build>
